리액트 버전에 맞게 기본 지도 인스턴스 생성

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>React App</title>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c75b0a78b27a0bf45cdccb41774779fd"></script>
 </head>
 
 <body>
