--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <div class="defaults"></div>
+  <div class="defaults">검색봇이 SEO를 위해 읽어야 되는 중요한 텍스트 데이터</div>
   <div class="mask">Loading...</div>
 
   <script>
