커스텀훅으로 throttling적용

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c75b0a78b27a0bf45cdccb41774779fd"></script>
   <style>
     .default {
+      width: 500px;
+      height: 500px;
+      overflow: hidden;
       position: absolute;
       top: -99999px;
     }
